<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:navigationIcon="@drawable/ic_arrow_back_white_24dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_search"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_35"
                    android:layout_weight="1"
                    android:background="@drawable/bg_border_search"
                    android:drawablePadding="@dimen/padding_8"
                    android:drawableRight="@drawable/ic_close_gray_24dp"
                    android:hint="Search or enter url"
                    android:lines="1"
                    android:paddingLeft="@dimen/padding_8"
                    android:paddingRight="@dimen/padding_8"
                    android:singleLine="true"
                    android:textSize="@dimen/text_14" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:padding="@dimen/padding_10"
                    app:srcCompat="@drawable/ic_search_white"
                    tools:ignore="VectorDrawableCompat" />
            </LinearLayout>
        </android.support.v7.widget.Toolbar>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <WebView
                android:id="@+id/webview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_not_support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:padding="@dimen/padding_40"
                android:text="@string/text_not_support"
                android:textColor="@color/black_85"
                android:textSize="@dimen/text_14"
                android:textStyle="bold"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_4"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/layout_social"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/padding_16"
                    android:text="POPULAR"
                    android:textColor="@color/black_85"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/padding_16"
                    android:layout_marginRight="@dimen/padding_16"
                    android:background="@color/color_gray" />

                <LinearLayout
                    android:id="@+id/btn_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_16">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="@dimen/size_40"
                        android:layout_height="@dimen/size_40"
                        android:layout_marginRight="@dimen/padding_16"
                        android:background="@drawable/bg_border_facebook"
                        android:gravity="center"
                        android:text="F"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_16"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Facebook"
                            android:textColor="@color/black_85"
                            android:textSize="@dimen/text_16" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tv_facebook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/link_facebook"
                            android:textColor="@color/black_55" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/padding_16"
                    android:layout_marginRight="@dimen/padding_16"
                    android:background="@color/color_gray" />

                <LinearLayout
                    android:id="@+id/btn_twitter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_16">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="@dimen/size_40"
                        android:layout_height="@dimen/size_40"
                        android:layout_marginRight="@dimen/padding_16"
                        android:background="@drawable/bg_border_twitter"
                        android:gravity="center"
                        android:text="T"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_16"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Twitter"
                            android:textColor="@color/black_85"
                            android:textSize="@dimen/text_16" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tv_twitter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/link_twitter"
                            android:textColor="@color/black_55" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/padding_16"
                    android:layout_marginRight="@dimen/padding_16"
                    android:background="@color/color_gray" />

                <LinearLayout
                    android:id="@+id/btn_instagram"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_16">

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="@dimen/size_40"
                        android:layout_height="@dimen/size_40"
                        android:layout_marginRight="@dimen/padding_16"
                        android:background="@drawable/bg_border_instagram"
                        android:gravity="center"
                        android:text="I"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_16"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <android.support.v7.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Instagram"
                            android:textColor="@color/black_85"
                            android:textSize="@dimen/text_16" />

                        <android.support.v7.widget.AppCompatTextView
                            android:id="@+id/tv_instagram"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/link_instagram"
                            android:textColor="@color/black_55" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="@dimen/padding_16"
                    android:layout_marginRight="@dimen/padding_16"
                    android:background="@color/color_gray" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/layout_bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@drawable/bg_gradient"
                android:padding="@dimen/padding_10"
                android:visibility="gone">

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:text="aaa"
                    android:textColor="@android:color/white"
                    android:visibility="gone" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_back"
                    android:layout_width="@dimen/size_25"
                    android:layout_height="@dimen/size_25"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_border_arrow"
                    android:padding="@dimen/padding_4"
                    app:srcCompat="@drawable/ic_arrow_back_white_24dp"
                    tools:ignore="VectorDrawableCompat" />

                <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/iv_next"
                    android:layout_width="@dimen/size_25"
                    android:layout_height="@dimen/size_25"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/padding_16"
                    android:layout_toRightOf="@+id/iv_back"
                    android:background="@drawable/bg_border_arrow"
                    android:padding="@dimen/padding_4"
                    android:rotation="180"
                    app:srcCompat="@drawable/ic_arrow_back_white_24dp"
                    tools:ignore="VectorDrawableCompat" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ic_download_white_24dp" />
            </RelativeLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/layout_banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="vertical" />

    </LinearLayout>
</layout>
